# LunGula

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-tag.yml  ci.yml  labeler.yml  pr-check.yml  release.yml  stale.yml
lungula/: __init__.py  cli.py
lungula/core/: base_game.py  dataset.py  trainer.py
lungula/games/osu/: plugin.py
lunimago/: __init__.py  cli.py
lunimago/core/: base_game.py  dataset.py  device.py  trainer.py
lunimago/core/export/: onnx_exporter.py
lunimago/core/models/: base_model.py  lstm_agent.py
lunimago/games/osu/: parser.py  plugin.py
scripts/: collect_dataset.py  fetch_osu_replays.py
tests/core/: test_base_game.py  test_dataset.py  test_device.py  test_models.py  test_onnx_exporter.py  test_trainer.py
tests/games/osu/: test_parser.py
