[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lunimago"
version = "0.2.0"
description = "Game imitation learning framework — behavior cloning from replays to ONNX"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "onnx>=1.14",
    "onnxscript>=0.1",
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
directml = ["torch-directml"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
lunimago = "lunimago.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lunimago"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
